openshift/disallow-security-context-constraint-anyuid/.chainsaw-test/clusterroles-good.yaml
apiVersion: rbac.authorization.k8s.io/v1
kind: ClusterRole
metadata:
  name: crole-good01
rules:
- apiGroups: [""]
  resources: ["secrets"]
  verbs: ["get", "watch", "list"]
