openshift/disallow-security-context-constraint-anyuid/.chainsaw-test/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  creationTimestamp: null
  name: disallow-security-context-constraint-anyuid
spec:
  steps:
  - name: step-01
    try:
    - apply:
        file: ../disallow-security-context-constraint-anyuid.yaml
    - assert:
        file: policy-ready.yaml
  - name: step-02
    try:
    - apply:
        file: roles-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: roles-bad.yaml
    - apply:
        file: clusterroles-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: clusterroles-bad.yaml
    - apply:
        file: rb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: rb-bad.yaml
    - apply:
        file: crb-good.yaml
    - apply:
        expect:
        - check:
            ($error != null): true
        file: crb-bad.yaml
